--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,12 @@
 			<version>2.3.5</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-ui</artifactId>
+			<version>1.6.11</version>
+		 </dependency>
+
 	</dependencies>
 
 	<build>
