--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,13 @@
 			<version>1.6.11</version>
 		 </dependency>
 
+		 <dependency>
+			<groupId>io.rest-assured</groupId>
+			<artifactId>rest-assured</artifactId>
+			<version>5.2.0</version>
+			<scope>test</scope>
+		 </dependency>
+
 	</dependencies>
 
 	<build>
