--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,19 @@
 			<groupId>io.rest-assured</groupId>
 			<artifactId>rest-assured</artifactId>
 			<scope>test</scope>
+			<version>5.2.0</version>
 		 </dependency>
+
+		 <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		  </dependency>
+	  
+		  <dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<scope>runtime</scope>
+		  </dependency>
 
 	</dependencies>
 
