--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,11 @@
 server.error.include-exception=false
 server.error.include-stacktrace=never
 server.error.include-message=always
+
+spring.datasource.url=jdbc:postgresql://localhost:3308/parking?useTimezone=true&serverTimezone=UTC&useLegacyDate
+spring.datasource.username=postgres
+spring.datasource.password=515duardo
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate-format-sql=true
