--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,13 @@
 			<scope>runtime</scope>
 		  </dependency>
 
+		  <dependency>
+			<groupId>org.testcontainers</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>1.17.3</version>
+			<scope>test</scope>
+		  </dependency>
+
 	</dependencies>
 
 	<build>
